welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:23: error: ';' expected but '.' found.
Il y a un mur au nord de la buggle. Donc, si la buggle regarde à l'est, il faut vérifier s'il y a un mur à gauche,
                                  ^SnakeBuggle:30: error: identifier expected but '}' found.
}
^