welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	while (!positionfinale) { mur() }

	def mur() = { 
		while (!estFaceMur) {avance() }
		while (estFaceMur) {
			if (getDirection() == Direction.EST) { gauche(); avance(); gauche() }
			if (getDirection() == Direction.OUEST) { droite(); avance(); droite() }
		}	
		}
	def positionfinale():Boolean = { 
		if (estFaceMur) { gauche()
			if (estFaceMur) { true }  }
	}
	}

		


On est face à un mur
Il y a un mur au nord de la buggle. Donc, si la buggle regarde à l'est, il faut vérifier s'il y a un mur à gauche,
et si la buggle regarde à l'ouest,il faut vérifier s'il y a un mur à droite. 
On obtient la direction actuelle de la buggle avec la méthode getDirection(),
et on sait si elle regarde à l'est avec le test getDirection() == Direction.EST (ou bien OUEST).
Pour la vérification elle-même, rien de magique : il faut se tourner et regarder si on est face à un mur une fois
tourné.